--- a/todo.org
+++ b/todo.org
@@ -1,4 +1,9 @@
 #+TITLE: Todos
 * DONE impl ~StackTrace~ for ~ValueStack~ and ~CallStack~
 * TODO implement functions
+** TODO Create Heap
+*** String hashmap
+*** obj list
+** Objects
+** TODO Strings
 * DONE impl ~Display~ for ~Value~ 
